Kubernetes/dbdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecomdb
  labels:
    app: ecomdb
spec:
  selector:
    matchLabels:
      app: ecomdb
  replicas: 1
  template:
    metadata:
      labels:
        app: ecomdb
    spec:
      containers:
        - name: ecomdb
          image: mysql
          ports:
            - name: ecomdb-port
              containerPort: 3306
