Kubernetes/dbsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecomdb
spec:
  ports:
    - port: 3306
      targetPort: ecomdb-port
      protocol: TCP
  selector:
    app: ecomdb
  type: ClusterIP
