Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-user-management
spec:
  selector:
    app: ecom-user-management
  ports:
    - port: 8080
      targetPort: ecom-user-management-port
      protocol: TCP
  type:
    ClusterIP
